@pedroGoffi[added to stdlib conversion between string-[non-floating-ptr-number]]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,8 @@
 {
   "version": "0.2.0",
   "configurations": [
+    
+
     {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
@@ -8,8 +10,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/robot/Dev/Pietra",
-      "program": "/home/robot/Dev/Pietra/build/Debug/outDebug",
+      "cwd": "/home/robot/Dev/Pietra/src",
+      "program": "/home/robot/Dev/Pietra/src/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
