@pedroGoffi[Some advance in selfhosting files + addes linked_list in std/list]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,5 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "editor.tabCompletion": "on",
   "diffEditor.codeLens": true,
-  "MutableAI.upsell": false
+  "MutableAI.upsell": true
 }
